[tool.black]
line-length = 88
skip-string-normalization = false
target-version = ['py37']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_to_top = ["rdkit", "scikit-learn"]

[tool.poetry]
name = "deep_fuzzy_elpigraph"
version = "0.1.0"
description = "deep_fuzzy_elpigraph"
authors = ["Andrei Zinovyev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
pandas = "^2.0.3"
tqdm = "^4.65.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
jupyterlab = "^4.0.3"
scikit-learn = "^1.4.0"
numpy = "1.26.4"